--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "webpack --mode=production --config ./webpack-config.js",
     "test": "node_modules/.bin/mocha",
     "preversion": "npm test",
-    "version": "npm run build && git add -A lib",
+    "version": "npm run build",
     "postversion": "git push && git push --tags"
   },
   "bugs": {
@@ -20,7 +20,7 @@
     "type": "git",
     "url": "https://github.com/stellar-expert/stellar-tx-signers-inspector"
   },
-  "main": "./src/index.js",
+  "main": "./lib/stellar-tx-signers-inspector.js",
   "keywords": [
     "stellar",
     "signature",
