--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@stellar-expert/tx-signers-inspector",
-  "version": "1.2.1",
-  "author": "OrbitLens<orbit.lens@gmail.com>",
+  "version": "1.3.0",
+  "author": "OrbitLens<orbit@stellar.expert>",
   "description": "Discover required signers, weights, and build optimal signature schema for Stellar transactions.",
   "license": "MIT",
   "homepage": "https://github.com/stellar-expert/stellar-tx-signers-inspector",
@@ -14,7 +14,7 @@
   },
   "bugs": {
     "url": "https://github.com/stellar-expert/stellar-tx-signers-inspector/issues",
-    "email": "orbit.lens@gmail.com"
+    "email": "orbit@stellar.expert"
   },
   "repository": {
     "type": "git",
@@ -28,8 +28,8 @@
     "multi-sig",
     "signer"
   ],
-  "dependencies": {
-    "stellar-sdk": "^8.2.0"
+  "peerDependencies": {
+    "stellar-sdk": ">=8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
