--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/register": "^7.12.1",
+    "@stellar-expert/eslint-config-js": "github:stellar-expert/eslint-config-js",
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
+    "eslint": "^8.23.0",
     "mocha": "^7.2.0",
     "sinon": "^9.2.1 ",
     "terser-webpack-plugin": "^4.2.3",
