--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stellar-expert/tx-signers-inspector",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "author": "OrbitLens<orbit@stellar.expert>",
   "description": "Discover required signers, weights, and build optimal signature schema for Stellar transactions.",
   "license": "MIT",
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "webpack --mode=production --config ./webpack-config.js",
     "test": "node_modules/.bin/mocha",
+    "test-windows": "mocha",
     "preversion": "npm test",
     "version": "npm run build",
     "postversion": "git push && git push --tags"
@@ -29,7 +30,7 @@
     "signer"
   ],
   "peerDependencies": {
-    "stellar-sdk": ">=8.2.0"
+    "stellar-sdk": ">=10.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -39,6 +40,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/register": "^7.12.1",
+    "@stellar-expert/eslint-config-js": "github:stellar-expert/eslint-config-js",
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
     "mocha": "^7.2.0",
