--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "@stellar-expert/tx-signers-inspector",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "author": "OrbitLens<orbit@stellar.expert>",
   "description": "Discover required signers, weights, and build optimal signature schema for Stellar transactions.",
   "license": "MIT",
   "homepage": "https://github.com/stellar-expert/stellar-tx-signers-inspector",
   "scripts": {
     "build": "webpack --mode=production --config ./webpack-config.js",
-    "test": "node_modules/.bin/mocha",
-    "test-windows": "mocha",
+    "test": "mocha",
     "preversion": "npm test",
     "version": "npm run build",
     "postversion": "git push && git push --tags"
@@ -22,6 +21,7 @@
     "url": "https://github.com/stellar-expert/stellar-tx-signers-inspector"
   },
   "main": "./lib/stellar-tx-signers-inspector.js",
+  "module": "./src/index.js",
   "keywords": [
     "stellar",
     "signature",
@@ -29,24 +29,23 @@
     "multi-sig",
     "signer"
   ],
+  "engines": {
+    "node": ">=16"
+  },
   "peerDependencies": {
     "stellar-sdk": ">=10.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-decorators": "^7.12.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/register": "^7.12.1",
+    "@babel/core": "^7.19.0",
+    "@babel/preset-env": "^7.19.0",
+    "@babel/register": "^7.18.9",
     "@stellar-expert/eslint-config-js": "github:stellar-expert/eslint-config-js",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.5",
     "chai": "^4.2.0",
     "mocha": "^7.2.0",
     "sinon": "^9.2.1 ",
-    "terser-webpack-plugin": "^4.2.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "terser-webpack-plugin": "^5.3.6",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
